<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.katarzkubat.musicapp.EntryActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/chopin_entry"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/infoText"
        android:text="@string/Entry_info"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button_start"
        style="@style/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />

    <TextView
        style="@style/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:text="@string/intro" />

</RelativeLayout>
