<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playnow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.katarzkubat.musicapp.PlaynowActivity">

    <LinearLayout
        style="@style/LinearL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Playnow_info"
            style="@style/infoText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/paddingTopMedium">

            <TextView
                style="@style/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Record" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_favorite_black_24dp"
                android:id="@+id/add_favourite" />

        </LinearLayout>

        <ImageView
            style="@style/Image"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/piano"
            tools:ignore="ContentDescription"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop" />

        <LinearLayout
            style="@style/LinearL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/go_previous"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/play_pause"
                android:src="@drawable/ic_play_arrow_black_24dp" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/go_next"
                android:src="@drawable/ic_skip_next_black_24dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/volume"
                android:src="@drawable/ic_volume_down_black_24dp" />

        </LinearLayout>

        <TextView
            style="@style/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Introduction" />

    </LinearLayout>
</ScrollView>